Template, Home page added

--- a/home.html
+++ b/home.html
@@ -79,11 +79,49 @@
         </div>
     </nav>
     <!-- /Navbar -->
-
-
-    <!-- Main Content -->
     <main class="container-fluid mt-3">
+        <figure class="container-fluid row flex-wrap mx-0">
+            <img id="landing" class="col-12" src="./res/beertapoff.svg" height="620px" />
+            <figcaption class="mx-auto my-3">NI Beer</figcaption>
+        </figure>
 
+
+
+        <!-- Featured Posts -->
+        <section class="container-fluid flex-wrap mt-5 px-0">
+            <div class="container-fluid">
+                <h4 class="text-center section-title mx-auto">
+                    Featured Posts
+                </h4>
+            </div>
+            <div class="container-fluid row mx-auto mt-3 justify-content-center">
+                <div class="article-picture mx-3 mb-3">
+
+                </div>
+                <div class="article-picture mx-3 mb-3">
+
+                </div>
+            </div>
+        </section>
+        <!-- /Featured Posts -->
+
+        <!-- Most Recent -->
+        <section class="container-fluid flex-wrap mt-5">
+            <div class="container-fluid">
+                <h4 class="text-center section-title mx-auto">
+                    Most Recent
+                </h4>
+            </div>
+            <div class="container-fluid row mx-auto mt-3 justify-content-center">
+                <div class="article-picture mx-3 mb-3">
+
+                </div>
+                <div class="article-picture mx-3 mb-3">
+
+                </div>
+            </div>
+        </section>
+        <!-- /Most Recent -->
     </main>
 
 
