--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='./css/home.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/common.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/app.css'>
-    <link rel="stylesheet" href="./css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type='text/css' media='screen'href="./css/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap css -->
     <link rel='stylesheet' type='text/css' media='screen'
         href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
