--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -14,10 +14,10 @@
 
     <!-- SCSS produced css stylesheet -->
     <!-- Includes common styles -->
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/home.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/common.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/app.css'>
-    <link rel="stylesheet" type='text/css' media='screen'href="./css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/home.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/common.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/app.css'>
+    <link rel="stylesheet" type='text/css' media='screen'href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap css -->
     <link rel='stylesheet' type='text/css' media='screen'
         href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
