Heroku deploy commit

--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -17,6 +17,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/home.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/common.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/app.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/blog.css'>
     <link rel="stylesheet" type='text/css' media='screen'href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- Bootstrap css -->
@@ -37,7 +38,7 @@
 
 <body class="container-fluid">
     <!-- Main Content - Rendered by react to #root, do not edit-->
-    <main class="container-fluid mt-3" id="root">
+    <main class="container-fluid" id="root">
 
     </main>
 </body>
